Parameter --add-opens allowed only for JDK9+